More parsing code, model

--- a/hyperparameter_comparison.ipynb
+++ b/hyperparameter_comparison.ipynb
@@ -63,11 +63,15 @@
     "# batch size comparison\n",
     "reload(visualization)\n",
     "\n",
-    "# history_dict = model_interface.load_history(history_filename)\n",
+    "history_files = ['path_simple_lstm_batch_64', 'path_simple_lstm_batch_256', 'path_simple_lstm_batch_1024', 'path_simple_lstm_batch_8192']\n",
+    "history_dicts = []\n",
+    "for history_file in history_files:\n",
+    "    history_dicts.append(model_interface.load_history(history_file))\n",
+    "\n",
     "visualization.draw_losses(\n",
     "    'val_mean_absolute_error',\n",
     "    'val mean absolute error',\n",
-    "    ['path_simple_lstm_batch_64', 'path_simple_lstm_batch_256', 'path_simple_lstm_batch_1024', 'path_simple_lstm_batch_8192'],\n",
+    "    history_dicts,\n",
     "    ['batch size 64', 'batch size 256', 'batch size 1024', 'batch size 8192'],\n",
     "    'batch size comparison',\n",
     "    save_file='batch_size_comparison_lstm_val_mean_absolute_error',\n",
@@ -76,7 +80,7 @@
     "# visualization.draw_losses(\n",
     "#     'mean_absolute_error',\n",
     "#     'mean absolute error',\n",
-    "#     ['path_simple_lstm_batch_64', 'path_simple_lstm_batch_256', 'path_simple_lstm_batch_1024', 'path_simple_lstm_batch_8192'],\n",
+    "#     history_dicts,\n",
     "#     ['batch size 64', 'batch size 256', 'batch size 1024', 'batch size 8192'],\n",
     "#     'batch size comparison',\n",
     "#     save_file='batch_size_comparison_lstm_mean_absolute_error',\n",
@@ -96,6 +100,16 @@
     "plt.title('Training time for different batch sizes')\n",
     "plt.savefig(f\"batch_size_comparison_lstm_training_time.pdf\")\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# compare learning rate\n",
+    "\n"
    ]
   }
  ],
