--- a/simple_dropout_cnn_analysis.ipynb
+++ b/simple_dropout_cnn_analysis.ipynb
@@ -4712,12 +4712,14 @@
     "x = unified[:,:,0].flatten()\n",
     "y = unified[:,:,1].flatten()\n",
     "print(x.shape, y.shape)\n",
-    "plt.subplots()\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(8.0, 8.0)\n",
     "seaborn.kdeplot(x=x, y=y, cmap=\"Reds\", fill=True, levels=50, gridsize=100)\n",
     "plt.xlabel('x offset')\n",
     "plt.ylabel('y offset')\n",
     "\n",
-    "plt.subplots()\n",
+    "fig, ax = plt.subplots()\n",
+    "fig.set_size_inches(8.0, 8.0)\n",
     "seaborn.kdeplot(x=x, y=y, cmap=\"mako\", fill=True, levels=100, thresh=0, gridsize=100)\n",
     "plt.xlabel('x offset')\n",
     "plt.ylabel('y offset')"
