A bit more result generation

--- a/hyperparameter_comparison.ipynb
+++ b/hyperparameter_comparison.ipynb
@@ -26,7 +26,8 @@
     "reload(util)\n",
     "reload(config)\n",
     "\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from tensorflow.keras.utils import plot_model"
    ]
   },
   {
@@ -218,6 +219,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_data, eval_data, test_data = parsing.load_processed_data(\"medium_aa.csv\")\n",
+    "input_shape = train_data[0].shape\n",
+    "input_shape = (input_shape[1], input_shape[2])"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [
@@ -278,11 +290,7 @@
     "from src import transformer_k\n",
     "reload(transformer_k)\n",
     "\n",
-    "train_data, eval_data, test_data = parsing.load_processed_data(\"medium_aa.csv\")\n",
-    "\n",
     "m = model_path.ModelPath(uses_goal=False)\n",
-    "input_shape = train_data[0].shape\n",
-    "input_shape = (input_shape[1], input_shape[2])\n",
     "model = transformer_k.build_model(\n",
     "    input_shape,\n",
     "    head_size=64, # 256\n",
@@ -500,6 +508,24 @@
     ")\n",
     "\n",
     "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('You must install pydot (`pip install pydot`) and install graphviz (see instructions at https://graphviz.gitlab.io/download/) ', 'for plot_model/model_to_dot to work.')\n"
+     ]
+    }
+   ],
+   "source": [
+    "model=models_path.simple_cnn(input_shape)\n",
+    "plot_model(model)"
    ]
   }
  ],
